# edu_info

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: data-sync.yml  generate-reports.yml
.streamlit/: config.toml
data/: input_students.json
data/raw/2025/: crawl_report_2025.json  majors_2025.json  scores_2025.json  universities_2025.json
docs/: AGENTS.md  BACKEND_COMPLETE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  DELIVERY_STATUS.md  DEMO_GUIDE.md  FINAL_SUMMARY.md  HOW_TO_RUN.md  LESSONS_LEARNED.md  PHASE1_COMPLETE.md  PHASE3_FINAL_SUMMARY.md  PHASE3_PROGRESS.md  PHASE4_UI_COMPLETE.md  PREVENTION_CHECKLIST.md  PROJECT_SETUP_SUMMARY.md  REAL_COMPLETION_STATUS.md  openspec-guide.md  规范化工作报告.md
docs/archive/design-v2/: 01-requirements-v2.md  02-local-architecture.md  03-data-collection-v2.md  04-planning-engine.md  05-ui-design.md  06-development-plan-v2.md  README.md
docs/archive/design-v3/: 00-master-plan.md
docs/iterations/: I-001-card.md  I-001-requirements.md
docs/superpowers/plans/: 2026-04-11-Phase1-uv 项目搭建.md  2026-04-20-major-scraper.md
docs/superpowers/specs/: 2026-04-11-升学规划系统设计-v3.md  2026-04-20-major-scraper-design.md
examples/: usage_examples.py
openspec/changes/add-data-visualization/: design.md  proposal.md  tasks.md
openspec/changes/add-data-visualization/specs/: core-requirements.md
openspec/changes/archive/2026-05-06-establish-openspec-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-analyze-and-fix-remaining-issues/: design.md  proposal.md  tasks.md
openspec/specs/: api-spec.md  architecture.md  data-model.md
output/reports/: 张小明_升学规划报告.md  李美华_升学规划报告.md  王铁柱_升学规划报告.md
scripts/: IMPORT_ISSUES.md  QUICKSTART.md  README_2025_CRAWL.md  README_DATA_MANAGEMENT.md  apply_simple_fix.py  check_duplicates.py  check_indexes.py  collect_data.py  crawl_2025_data.py  crawl_school_data.py  create_track_tables.py  create_universities_table.py  data_manager.py  enrich_universities_database.py  find_all_links.py  generate_reference_scores.py  generate_reports.py  import_2025_data.py  import_2025_data_fixed.py  import_all_universities.py  import_historical_scores.py  import_official_2024_scores.py  import_official_2025_scores.py  import_real_data.py  init_database.py  inject_real_majors.py  inspect_chsi.py  inspect_db.py  migrate_majors.py  reorganize_data.py  run_major_scraper.py  seed_academic_and_industry_data.py  setup_db.py  start.sh  test_engine_single.py  test_enumerator.py  test_matching.py  test_stealth.py  test_target_generator.py  update_universities_all_fields.py  (+1 more)
src/: __init__.py
src/edu_info/: __init__.py  main.py  py.typed
src/edu_info/core/: feasibility_assessor.py  matching_engine.py  matching_reason_generator.py  planning_engine.py  route_enumerator.py  subject_validator.py  target_generator.py
src/edu_info/data/: __init__.py  sample_routes.json  sample_students.json  sample_universities.json  universities_985_211.json
src/edu_info/data/repositories/: track_repository.py
src/edu_info/database/: __init__.py  database.py  schema.py
src/edu_info/models/: __init__.py  schemas.py  track.py
src/edu_info/services/: __init__.py  data_importer.py  track_matching_service.py  university_crawler.py
src/edu_info/services/major_scraper/: __init__.py  data_processor.py  engine.py  scheduler.py
src/edu_info/ui/components/: common.py
src/edu_info/ui/pages/: 01_student_profile.py  02_data_import.py  03_planning_analysis.py  04_results_display.py  04_results_display_track.py  (+2 more)
src/edu_info/utils/: config.py  errors.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_database.py  test_feasibility_assessor.py  test_matching_engine.py  test_route_enumerator.py  test_scraper_scheduler.py  test_target_generator.py  test_track_repository.py  test_validators.py
(+2 files in other folders)
