[project]
name = "edu-info"
version = "0.1.0"
description = "升学规划咨询系统 - 基于国家战略的个性化升学规划工具 (批量报告生成版)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Limingkai", email = "your.email@example.com" }
]
keywords = [
    "education",
    "career-planning",
    "university-admission",
    "data-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

# 运行时仅需 Pydantic
dependencies = [
    "pydantic>=2.6.0",
]

# 开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

# 开发依赖组
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

# uv 特定配置
[tool.uv]

# 清华镜像加速
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 构建系统
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edu_info"]

# Ruff 配置
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["edu_info"]

# Mypy 配置
[tool.mypy]
python_version = "3.12"
strict = false
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
ignore_errors = true

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/edu_info --cov-report=term-missing -p no:cacheprovider"
